--- a/index.html
+++ b/index.html
@@ -5,11 +5,77 @@
     <title>Web Developer - Nikkoli Castilan</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Zeyada&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="">
+    <div id="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
       <h1 id="header">I'm Nix</h1>
-      <p>A Web Developer</p>
+      <h2>A <span class="webdev">Web</span> Developer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+      <img src="images/mountain.png" alt="cloud-img" />
+    </div>
+    <div id="middle-container">
+      <div class="profile">
+        <img src="images/nikkoli.png" alt="profile-img" />
+        <h2>Hello.</h2>
+        <p>
+          Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
+          Non auctor, montes nulla distinctio.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="skills-img" src="images/ux.png" alt="web-designer-img" />
+          <h3>Lorem & Ipsum</h3>
+          <p>
+            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
+            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
+            nam, lectus ante, ut lorem eros.
+          </p>
+        </div>
+        <div class="skill-row">
+          <img
+            class="skills-img"
+            src="images/teamwork.png"
+            alt="teamwork-img"
+          />
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>
+            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
+            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
+            eu, rutrum nam.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
+          tellus donec dui, ornare erat.
+        </p>
+        <a class="btn" href="mailto:ndcastilan@email.com">CONTACT ME</a>
+      </div>
+    </div>
+
+    <div id="bottom-container">
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/nikkoli-castilan/"
+        >LinkedIn</a
+      >
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>© Nikkoli Castilan.</p>
     </div>
   </body>
 </html>
