clean up portfolio

--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <title>Web Developer - Nikkoli Castilan</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&family=Zeyada&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div id="top-container">
@@ -18,24 +12,24 @@
       <h1 id="header">I'm Nix</h1>
       <h2>A <span class="webdev">Web</span> Developer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
-      <img src="images/mountain.png" alt="cloud-img" />
+      <img class="mountain-img" src="images/mountain.png" alt="cloud-img" />
     </div>
     <div id="middle-container">
       <div class="profile">
         <img src="images/nikkoli.png" alt="profile-img" />
-        <h2>Hello.</h2>
-        <p>
-          Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
-          Non auctor, montes nulla distinctio.
+        <h2>Hello</h2>
+        <p class="intro">
+          I am a Full Stack Developer with more than 10 years of experience in
+          software development.
         </p>
       </div>
       <hr />
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2>My Skills</h2>
         <div class="skill-row">
-          <img class="skills-img" src="images/ux.png" alt="web-designer-img" />
+          <img class="skills-img1" src="images/ux.png" alt="web-designer-img" />
           <h3>Lorem & Ipsum</h3>
-          <p>
+          <p class="skills-desc1">
             Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
             Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
             nam, lectus ante, ut lorem eros.
@@ -43,12 +37,12 @@
         </div>
         <div class="skill-row">
           <img
-            class="skills-img"
+            class="skills-img2"
             src="images/teamwork.png"
             alt="teamwork-img"
           />
           <h3>Lorem Ipsum Dolor</h3>
-          <p>
+          <p class="skills-desc2">
             Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
             bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
             eu, rutrum nam.
@@ -75,7 +69,7 @@
       >
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© Nikkoli Castilan.</p>
+      <p id="footer-copyright">© Nikkoli Castilan.</p>
     </div>
   </body>
 </html>
